...
    <string name="Email_error">Email cannot be longer than 30 characters</string>
    <string name="Email_error_invalid">Please enter a valid email</string>
    <string name="Password_empty">Password is required</string>
    <string name="Password_error">Password must be at least 6 characters</string>
    <string name="Toast_username">Please choose a different username.</string>
    <string name="Toast_email">This email has already been registered.</string>
    <string name="Toast_email_does_not_exist">There is no user record corresponding to this
        identifier. The user may have been deleted.</string>
    <string name="Toast_password_does_not_exist">The password is invalid or the user does not have
    a password.</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

...
